--- a/ArweaveAO/ArweaveAO.csproj
+++ b/ArweaveAO/ArweaveAO.csproj
@@ -8,7 +8,7 @@
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<Authors>Michiel Post</Authors>
-		<Version>0.0.2</Version>
+		<Version>0.0.3</Version>
 		<Product>ArweaveAO</Product>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/michielpost/ArweaveDotNet</PackageProjectUrl>
@@ -19,6 +19,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
 		<PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
 	</ItemGroup>
 
