--- a/ArweaveAO/ArweaveAO.csproj
+++ b/ArweaveAO/ArweaveAO.csproj
@@ -8,7 +8,7 @@
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<Authors>Michiel Post</Authors>
-		<Version>0.0.6</Version>
+		<Version>0.0.7</Version>
 		<Product>ArweaveAO</Product>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/michielpost/ArweaveDotNet</PackageProjectUrl>
@@ -20,6 +20,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
+		<PackageReference Include="Nethereum.Util" Version="4.21.4" />
 		<PackageReference Include="System.Net.Http.Json" Version="8.0.0" />
 	</ItemGroup>
 
