Mint token example refactored

--- a/ArweaveBlazor.SampleApp/ArweaveBlazor.SampleApp.csproj
+++ b/ArweaveBlazor.SampleApp/ArweaveBlazor.SampleApp.csproj
@@ -11,11 +11,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="token.txt" />
+    <None Remove="token.lua" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="token.txt" />
+    <EmbeddedResource Include="token.lua" />
   </ItemGroup>
 
   <ItemGroup>
